test/classes/errors/nilability-init-var/init-var-oknil-owned-from-oknil-shared.good
init-var-oknil-owned-from-oknil-shared.chpl:9: error: invalid copy-initialization
init-var-oknil-owned-from-oknil-shared.chpl:9: error: Cannot initialize 'owned MyClass?' from a 'shared MyClass?'
